# falsegreen-robot

./: .all-contributorsrc  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: all-contributors.yml  ci.yml  credit-contributor.yml  release-drafter.yml  release.yml
src/falsegreen_robot/: scanner.py
tests/: test_scanner.py
